# fletcher-oc-accel

./: README.md  fletcher_fail2warn.patch
examples/stringwrite/: Makefile
examples/stringwrite/hw/: action_fletcher.vhd  action_types.vhd  axitop_pkg.vhd
examples/stringwrite/hw/tcl/: vhdl2008.tcl
examples/stringwrite/sw/: snap_stringwrite.c  snap_stringwrite.h
examples/sum/: Makefile
examples/sum/hw/: Makefile  action_fletcher.vhd_source  action_types.vhd  axitop_pkg.vhd
examples/sum/sw/: run_ocxl_cosim_notebook.sh  sum.ipynb
runtime/: CMakeLists.txt
runtime/src/: fletcher_oc-accel.c  fletcher_oc-accel.h  fletcher_snap.c  fletcher_snap.h
